3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/arch.c: fix item_matched_string() so that matching makes sense -
   the ordering was wrong, so that we would match something with a low
   priority, and skip over looking to see if that same object would get
   a better match.  Order the function so that we look for the best
   matches first.
MSW 2003-10-08

socket/request.c: Clean up some compile warnings.  Improve big face
  handling - there were cases where data wasn't being sent when
  it should have, and vice versa.  Basically, do better checking
  to see if we should send a big face for a particular layer, and
  also better checking to make sure we don't send the same face more
  than once for the same layer.  Also, change esrv_map_scroll() 
  to clear out spaces that appear into view - adds a little extra bandwdith,
  but necessary because otherwise the fact there is a big face on the edge
  doesn't always get sent.
MSW 2003-10-07

TODO: various updates.
common/button: Old patch by David Seikel: change inventory checkers so that
   the monster/player is also checked against.  And do more proper for checkers
   that check against slaying or race - if the trigger doesn't have
   those set, we don't want to compare a null against another null and
   get success).
server/apply.c: Change apply_shop_mat() so that it removes unpaid objects from
   monsters (or thrown containers for that matter).  Old patch by Bernd Edler
   to improve messages dragons get for eating various food types.
server/player.c: Add another missing call to fix_player().  Modify
   move_player_attack() so that the target player doesn't hit back if
   they are the WIZ or on a battleground